--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-astroid==2.3.3
 Django==2.2.7
 django-crispy-forms==1.8.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
+django-tables2-bootstrap4==2.0.0b5
 psycopg2==2.8.4
-pylint==2.4.4
 pytz==2019.3
-six==1.13.0
 sqlparse==0.3.0
-typed-ast==1.4.0
-wrapt==1.11.2
